receiving betting round updated event and updating pot